# bottleneck-stubs

./: README.md  example.py  pyproject.toml
bottleneck/: __init__.pyi  move.pyi  non_reduce.pyi  reduce.pyi  types.py
src/bottleneck-stubs/: __init__.pyi  _types.pyi  move.pyi  non_reduce.pyi  reduce.pyi
