[project]
name = "bottleneck-stubs"
version = "0.1.5"
description = "Bottleneck stubs for type checks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bottleneck>=1.6.0",
    "numpy>=2.2.6",
]
